--- a/governanceCollector/webapp/public/lib/angular-dual-multiselect-directive/dualmultiselect.css
+++ b/governanceCollector/webapp/public/lib/angular-dual-multiselect-directive/dualmultiselect.css
@@ -15,7 +15,8 @@
   overflow-y: scroll;
 }
 
-.dualmultiselect .pool ul {
+
+/* .dualmultiselect .pool ul {
   list-style: none;
   padding-left: 0px;
 }
@@ -24,7 +25,7 @@
   width: 100%;
   padding: 4px 8px 4px 4px;
   border-bottom: 1px dotted #CFCFCF;
-}
+} */
 
 .dualmultiselect .pool ul li a:hover {
   text-decoration: none;
