--- a/governanceCollector/webapp/public/css/governancecollector.css
+++ b/governanceCollector/webapp/public/css/governancecollector.css
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     width: 48%;
-    height: 200px;
+    height: 275px;
     margin: 0 1% 0 1%;
     align-items: center;
 }
@@ -58,6 +58,15 @@
     align-items: center;
     margin: 0 1% 0 1%;
     justify-content: center;
+}
+
+.governanceCollector .std-button {
+    min-width: 75px;
+}
+
+.governanceCollector .drop-and-button {
+    display: flex;
+    justify-content: space-between;
 }
 
 .governanceCollector .panel-heading {
